cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_7.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/pcbc_enc.c:46: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/pcbc_enc.c:46:9: Write of unused value
44.       } else {
45.           c2l(iv, xor0);
46.           c2l(iv, xor1);
              ^
47.           for (; length > 0; length -= 8) {
48.               c2l(in, sin0);
